--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "registry:build": "shadcn build"
+    "registry:build": "rm -rf ./public/r && shadcn build"
   },
   "dependencies": {
+    "@puckeditor/ai-types": "^0.5.0",
+    "@puckeditor/core": "^0.21.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.487.0",
+    "motion": "^12.27.0",
     "next": "15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
